# Technopark_IZ

./: .travis.yml  README.md  main.c  text.txt
IZ-1/: .travis.yml  CMakeLists.txt  README.md  functions.h  main.c
IZ-1/CI/Travis/: install.sh
IZ-1/Google_tests/: CMakeLists.txt  TestInsertionSort.cpp
IZ-2/: .travis.yml  CMakeLists.txt  main_shared.c  main_static.c
IZ-2/include/: letter.h  search.h
IZ-2/lib_shared/: CMakeLists.txt  library_shared.c  library_shared.h
IZ-2/lib_static/: CMakeLists.txt  llibrary_static.c  llibrary_static.h
IZ-2/src/: letter.c  search.c
